# toadstool

./: .gitignore  LICENSE  README.md  gql_loader.py  pyproject.toml  setup.py
src/toadstool/: __init__.py
src/toadstool/loaders/: __init__.py  base_loader.py  config_loader.py  csv_loader.py  gql_loader.py  json_loader.py  toml_loader.py  yaml_loader.py
src/toadstool/utils/: utils.py
